--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "DAZN interview project",
   "scripts": {
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
+    "start": "serve -s dist",
+    "heroku-postbuild": "npm run build"
   },
   "author": "Lorenzo Cinque <lorenzo.cinque@gmail.com>",
   "license": "MIT",
@@ -30,6 +32,7 @@
   },
   "dependencies": {
     "react": "^16.6.1",
-    "react-dom": "^16.6.1"
+    "react-dom": "^16.6.1",
+    "serve": "^10.0.2"
   }
 }
