--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
     "start": "serve -s dist",
-    "heroku-postbuild": "npm run build"
+    "heroku-postbuild": "npm run build",
+    "test": "jest"
   },
   "author": "Lorenzo Cinque <lorenzo.cinque@gmail.com>",
   "license": "MIT",
@@ -15,7 +16,9 @@
     "@babel/core": "^7.1.5",
     "@babel/preset-env": "^7.1.5",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
+    "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -25,7 +28,10 @@
     "eslint-plugin-prettier": "^3.0.0",
     "eslint-plugin-react": "^7.11.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
+    "jest-dom": "^2.1.1",
     "prettier": "^1.15.2",
+    "react-testing-library": "^5.2.3",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
