--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",
+    "dotenv-webpack": "^1.5.7",
     "eslint": "^5.9.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -31,6 +32,7 @@
     "jest": "^23.6.0",
     "jest-dom": "^2.1.1",
     "prettier": "^1.15.2",
+    "prop-types": "^15.6.2",
     "react-testing-library": "^5.2.3",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
