--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "serve": "^10.0.2"
+    "serve": "^10.0.2",
+    "styled-components": "^4.1.0"
   }
 }
