--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "jest-dom": "^2.1.1",
+    "jest-fetch-mock": "^1.7.4",
     "prettier": "^1.15.2",
     "react-testing-library": "^5.2.3",
     "webpack": "^4.25.1",
